# cxxet

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  TODO.md  compile.bash  cxxet_manage.bash  easy.bash  execute_in_gdb.bash  gen_many_easy_traces.bash  run_clang-format.bash  tests.bash
.github/: copilot-instructions.md
benchmarks/: CMakeLists.txt
doc/: TODO.md  UsingChromeTrace.md  UsingTraceEventFormat.md  UsingTracyProfiler.md
docker/: cxxet_compiler.Dockerfile
examples/: CMakeLists.txt  README.md
examples/cmake_fetch_content/: 1.cxx  CMakeLists.txt  direct_usage.cxx  indirect_usage.cxx  shared_lib_foo.cxx
examples/cmake_fetch_content/direct_usage/: CMakeLists.txt  direct_usage.cxx
examples/cmake_fetch_content/indirect_usage/: CMakeLists.txt  indirect_usage.cxx  shared_lib_foo.cxx  shared_lib_foo.hxx
examples/complete/: 1.cpp  1.cxx  README.md
examples/counter/: 1.cpp  1.cxx  2.cpp  2.cxx  README.md
examples/duration/: 1.cpp  1.cxx  README.md
examples/for_benchmarks/: CMakeLists.txt  bench_init.cxx  bench_mt_counter.cxx  bench_st_complete.cxx  bench_st_duration.cxx  bench_st_guarded_instant.cxx  bench_st_instant.cxx
examples/for_benchmarks/common/headers/: common.hxx  cxxet_bench_driver.hxx
examples/for_benchmarks/common/sources/: common.cxx  cxxet_bench_driver.cxx
examples/for_benchmarks/postprocessing/: CMakeLists.txt  main.cxx
examples/for_benchmarks/postprocessing/include/: log.hxx  statistics.hxx
examples/for_benchmarks/postprocessing/src/: log.cxx  main.cxx  result_processor.cxx  statistics.cxx  str_utils.cxx
examples/for_tests/: CMakeLists.txt  custom_writer.cxx  empty_file.cxx  empty_file_1.cpp  empty_file_1.cxx  empty_file_2.cpp  empty_file_2.cxx  failed_init_1.cpp  failed_init_1.cxx  failed_init_2.cpp  failed_init_2.cxx  only_init.cpp  only_init.cxx  reading_env.cpp  reading_env.cxx  split_files.cpp  split_files.cxx  suboptimal_init_1.cxx  suboptimal_init_2.cxx
examples/instant/: 1.cpp  1.cxx  2.cpp  2.cxx  README.md
examples/sink_diversion/: 2.cxx  3.cxx  4.cxx  README.md
examples/usage/: CMakeLists.txt  README.md
examples/usage/categories/: 1.cxx  2.cxx  3.cxx  4.cxx  README.md
examples/usage/complete/: 1.cxx
examples/usage/counter/: 1.cxx  2.cxx
examples/usage/duration/: 1.cxx
examples/usage/instant/: 1.cxx  2.cxx
examples/usage/metadata/: 1.cxx  README.md
examples/usage/sink_diversion/: 1.cxx  2.cxx  3.cxx  4.cxx  5.cxx  README.md
include/: rsm.hpp  rsm_output_format.hpp
include/all/cxxet/: all.hxx  basic.hxx
include/all/cxxst/: all.hpp  all.hxx
include/bare/cxxst/: all.hpp
include/bare/rsm/: all.hpp
include/impl/: central_sink.hpp  dump_records.hpp  global.hpp  linkage_macros.hpp  local_sink.hpp  marker_sink.hpp  record.hpp  records.hpp  sink.hpp  sink_properties.hpp  sink_traits.hpp  thread.hpp  thread_local_sink.hpp  utils.hpp
include/impl/event/: any.hpp  common.hpp
include/private/impl/: cascade_sink.hxx  cascade_sink_thread_safe.hxx  central_sink.hpp  central_sink.hxx  default_writer.hxx  dump_records.hpp  (+13 more)
include/public/: rsm.hpp
include/rsm/: mark_complete.hpp  mark_counter.hpp  mark_duration.hpp  mark_duration_begin.hpp  mark_duration_end.hpp  mark_instant.hpp  scope.hpp
scripts/: README.md
scripts/base/: cxxet_include.bash  cxxet_list_files.bash  cxxet_require_command.bash
scripts/benchmarks/: compare.bash
scripts/commands/: abi_check.bash  benchmark.bash  benchmarks.bash  checkout_git_branch.bash  compile.bash  debug_executable.bash  docker_build_image.bash  docker_devcontainer.bash  docker_interactive.bash  format_cxx.bash  purge_artifacts.bash  tests.bash
scripts/common/: commit_hash_json_file.bash  docker_image_name.bash  docker_run.bash  docker_validate_image_name_base.bash  dockerfile_name.bash  ensure_docker_is_allowed.bash  list_dockerfiles.bash  reject_further_args.bash
scripts/tests/: bats_runner.bash  benchmark_compare.bash  benchmark_runner.bash  get_bats_package.bash  initialize_bats.bash  unit_runner.bash  valid_examples_runner.bash
src/: rsm.cpp
src/cxxet/: mark_complete.cxx  mark_counter.cxx  mark_duration_begin.cxx  mark_duration_end.cxx  mark_instant.cxx  sink_control.cxx  sink_diversion.cxx  thread_local_sink_submit_event.cxx  timepoint.cxx  tmp_filename_handle.cxx
src/cxxst/: mark_complete.cpp  mark_complete.cxx  mark_counter.cxx  mark_duration_begin.cpp  mark_duration_begin.cxx  mark_duration_end.cpp  mark_duration_end.cxx  mark_instant.cxx  sink_control.cpp  sink_control.cxx
src/impl/: cascade_sink.cxx  cascade_sink_thread_safe.cxx  central_sink.cpp  central_sink.cxx  default_writer.cxx  dump_records.cpp  dump_records.cxx  file_sink.cxx  global.cpp  local_sink.cpp  local_sink.cxx  marker_sink.cpp  mutexed_sink.cxx  records.cpp  sink.cpp  sink.cxx  sink_properties.cpp  sink_properties.cxx  sink_test.cpp  sink_test.cxx  sink_traits.cpp  thread.cpp  thread_local_sink.cpp  thread_sink.cxx
src/rsm/: mark_complete.cpp  mark_counter.cpp  mark_duration_begin.cpp  mark_duration_end.cpp  mark_instant.cpp  sink_control.cpp
tests/dummy_app/: CMakeLists.txt  main.cpp  san_check.cpp
tests/infra/: CMakeLists.txt  san_check.cpp  san_check.cxx
tests/integration/: bats_runner.bash  bats_tests_runner.bash  run_tests.bash
tests/unit/: CMakeLists.txt  doctest_main.cxx  unit_runner.bash  unit_test_runner.bash
tests/unit/impl/: sink_test.cpp
tests/unit/impl/event/list/: event_list_test.cpp  list_test.cpp
tools/: CMakeLists.txt
tools/large_benchmark/: CMakeLists.txt
tools/large_benchmark/common/: CMakeLists.txt
tools/large_benchmark/common/include/: statistics.hxx
tools/large_benchmark/comparison/: CMakeLists.txt  main.cxx
tools/large_benchmark/comparison/include/: a.hxx  compare.hxx  mann_whitney_u_test.hxx
tools/large_benchmark/comparison/src/: a.cxx  compare.cxx  mann_whitney_u_test.cxx
tools/large_benchmark/postprocessing/: CMakeLists.txt  main.cxx
tools/large_benchmark/postprocessing/include/: now.hxx  result_processor.hxx  str_utils.hxx
tools/large_benchmark/postprocessing/src/: log.cxx
(+140 files in other folders)
